# tg-bot-api

./: .gitignore  CHANGELOG.md  CUSTOM_SCHEMA.md  Cargo.toml  LICENSE-MIT.md  README.md  V2_CHANGES.md  base-schema.yml  custom.json  custom.min.json  custom.schema.json  custom.schema.min.json  custom_v2.json  custom_v2.min.json  custom_v2.schema.json  custom_v2.schema.min.json  index.html  openapi.json  openapi.min.json  openapi.yml
.github/workflows/: ci.yml  gh-pages.yml
dev/: custom.json  custom.min.json  custom.schema.json  custom.schema.min.json  custom_v2.json  custom_v2.min.json  custom_v2.schema.json  custom_v2.schema.min.json  index.html  openapi.json  openapi.min.json  openapi.yml
gh-pages-generator/: Cargo.toml
gh-pages-generator/src/: custom.rs  custom2.rs  main.rs  openapi.rs
src/: custom.rs  extractor.rs  lib.rs  main.rs  openapi.rs  parser.rs  util.rs
src/parser/: sentence.rs  tags.rs
