[package]
name = "tg-bot-api"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
description = "Telegram Bot API parser"
repository = "https://github.com/ark0f/tg-bot-api"
documentation = "https://docs.rs/ark0f/tg-bot-api"
readme = "README.md"
include = ["Cargo.toml", "LICENSE-*.md", "src/**/*"]
keywords = ["telegram", "telegram-bot-api", "api", "parser"]
categories = ["development-tools", "parsing"]

[workspace]
members = ["gh-pages-generator"]

[dependencies]
scraper = "0.12.0"
ego-tree = "0.6.2"
thiserror = "1.0.22"
itertools = "0.9.0"
chrono = "0.4.19"
html2md = "0.2.10"
semver = "0.11.0"

[patch.crates-io]
# https://github.com/glademiller/openapiv3/pull/23
openapiv3 = { git = "https://github.com/DanielFCubides/openapiv3", branch = "patch-1" }
